# tote

./: .gitignore  next.config.ts  package-lock.json  package.json  start_all.js
SimulStreamingProjeti-main/: .gitignore  fast_whisper-Navegante.py  launcher.bat  run-large_v3_turbo.bat  run-medium.bat  run-speed-turbo-Navegante.bat
SimulStreamingProjeti-main/whisper_streaming/: whisper_server.py
app/: globals.css  page.tsx
app/hooks/: useSettingsPersistence.ts  useWindowPosition.ts
components/: SettingMenu.tsx  TypewriterText.tsx
components/settings/: BoxSettings.tsx  PositionSettings.tsx  TextSettings.tsx  ThemeSettings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: comandos.rs  estado.rs  mod.rs
